# pokipoki

./: .gitignore  CMakeLists.txt  Packaging.md  README.md  meson.build
example/: example.cpp  example.gen.h  example.h  meson.build
libpokipoki/: CMakeLists.txt  Database.cpp  meson.build  pokipoki.pc.in
libpokipoki/headers/: Database.h
poki-compiler/: CMakeLists.txt  build.sh  example.pokipoki  go.mod  main.go  meson.build
poki-compiler/parser/: document.go  output.go  parser.go  parser_test.go  verifier.go
src/: Database+SQL.cpp  Database.cpp  meson.build
src/headers/: Database+Private.h  Database.h
tests/: Notes.md  meson.build
tests/001-Simple-Write-And-Restore/: 001-A.cpp  001-B.cpp  001.h  001.pokipoki  meson.build
